--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="mv__inner">
             <div class="mv__heading">
                 <div class="mv__title">
-                    時代を変えるデザインを<br class="sp-only">印刷で伝える。
+                    時代を変える<br class="sp-only">デザインを<br class="sp-only tab-only">印刷で伝える。
                 </div>
                 <div class="mv__subtitle">
                     Creative Design, <br class="sp-only">Creative Printing
